[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/InfoPanels/ClientInfoPanel/Client_Info_Panel.gd" type="Script" id=1]
[ext_resource path="res://GUI/icons/client_status/client_status_200x100.png" type="Texture" id=2]
[ext_resource path="res://GUI/InfoPanels/ClientInfoPanel/textures/usage_status_under_texture.tres" type="Texture" id=3]
[ext_resource path="res://GUI/InfoPanels/ClientInfoPanel/textures/usage_status_progress_texture.tres" type="Texture" id=4]
[ext_resource path="res://GUI/InfoPanels/ClientInfoPanel/cpu_usage.gd" type="Script" id=5]
[ext_resource path="res://GUI/InfoPanels/ClientInfoPanel/memory_usage.gd" type="Script" id=6]
[ext_resource path="res://GUI/InfoPanels/ClientInfoPanel/current render log panel.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GUI/fonts/Caliban.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = SubResource( 1 )

[node name="ClientsInfoPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -802.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 478.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Details" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Details"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer"]
margin_right = 460.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 440.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainInfo" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 420.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo"]
margin_right = 420.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 120.0
rect_min_size = Vector2( 150, 100 )
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer"]
editor/display_folded = true
margin_left = 154.0
margin_right = 420.0
margin_bottom = 140.0
size_flags_horizontal = 3
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 37.0
margin_right = 266.0
margin_bottom = 103.0
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 246.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="NameLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 113.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = SubResource( 2 )
text = "JP System"

[node name="UserLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_top = 8.0
margin_right = 246.0
margin_bottom = 22.0
text = "user: Dennis Nedry"

[node name="StatusLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 246.0
margin_bottom = 48.0
text = "Status: Online"

[node name="UptimeLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 246.0
margin_bottom = 66.0
text = "Uptime: 4d 2h 34m"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 420.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 20 )

[node name="cpu_specs" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 168.0
margin_right = 420.0
margin_bottom = 212.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/cpu_specs"]
margin_right = 420.0
margin_bottom = 44.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/cpu_specs/HBoxContainer"]
margin_right = 420.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/cpu_specs/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 420.0
margin_bottom = 44.0
size_flags_vertical = 4

[node name="CPU Heading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/cpu_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "CPU"

[node name="CPULabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/cpu_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 32.0
text = "Intel Quadcore @4,0GHZ"

[node name="cpu_usage" type="TextureProgress" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/cpu_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 8 )
size_flags_horizontal = 0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
script = ExtResource( 5 )

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 420.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 20 )

[node name="memory_specs" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 240.0
margin_right = 420.0
margin_bottom = 284.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/memory_specs"]
margin_right = 420.0
margin_bottom = 44.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/memory_specs/HBoxContainer"]
margin_right = 420.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/memory_specs/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 420.0
margin_bottom = 44.0
size_flags_vertical = 4

[node name="Memory Heading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/memory_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "Memory"

[node name="RAMLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/memory_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 32.0
text = "32 GB"

[node name="memory_usage" type="TextureProgress" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/memory_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 8 )
size_flags_horizontal = 0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
script = ExtResource( 6 )

[node name="HSeparator3" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 420.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 20 )

[node name="hard_drives_specs" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 420.0
margin_bottom = 330.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/hard_drives_specs"]
margin_right = 420.0
margin_bottom = 18.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/hard_drives_specs/HBoxContainer"]
margin_right = 420.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/hard_drives_specs/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 420.0
margin_bottom = 18.0

[node name="Hard Drives Heading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/hard_drives_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "Hard Drives"

[node name="HardDriveContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/hard_drives_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 18.0
custom_constants/separation = 10

[node name="HSeparator4" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 334.0
margin_right = 420.0
margin_bottom = 354.0
rect_min_size = Vector2( 0, 20 )

[node name="graphics_specs" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 358.0
margin_right = 420.0
margin_bottom = 390.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/graphics_specs"]
margin_right = 420.0
margin_bottom = 32.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/graphics_specs/HBoxContainer"]
margin_right = 420.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/graphics_specs/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 420.0
margin_bottom = 32.0
size_flags_vertical = 4

[node name="Graphics Heading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/graphics_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.5, 0.5, 0.5, 1 )
text = "Graphics"

[node name="GraphicsLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/graphics_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 32.0
text = "NVidia 1080 Ti"

[node name="HSeparator5" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 420.0
margin_bottom = 414.0
rect_min_size = Vector2( 0, 20 )

[node name="network_specs" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 418.0
margin_right = 420.0
margin_bottom = 468.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/network_specs"]
margin_right = 420.0
margin_bottom = 50.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/network_specs/HBoxContainer"]
margin_right = 420.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/network_specs/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 420.0
margin_bottom = 50.0
size_flags_vertical = 4

[node name="Network Heading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/network_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "Network"

[node name="IPLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/network_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 32.0
text = "IP:  192.168.1.32"

[node name="MACLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/network_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 405.0
margin_bottom = 50.0
text = "MACs:  xx:xx:xx:xx:xx:xx"

[node name="HSeparator6" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 472.0
margin_right = 420.0
margin_bottom = 492.0
rect_min_size = Vector2( 0, 20 )

[node name="system_specs" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 496.0
margin_right = 420.0
margin_bottom = 528.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/system_specs"]
margin_right = 420.0
margin_bottom = 32.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/system_specs/HBoxContainer"]
margin_right = 420.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/system_specs/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 420.0
margin_bottom = 32.0
size_flags_vertical = 4

[node name="System Heading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/system_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "System"

[node name="PlatformLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/system_specs/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 32.0
text = "Windows 10"

[node name="Current Render Log" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="current render log panel" type="MarginContainer" parent="TabContainer/Current Render Log"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -62.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="LogText" type="RichTextLabel" parent="TabContainer/Current Render Log/current render log panel"]
margin_right = 470.0
margin_bottom = 502.0
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="StartButton" type="Button" parent="TabContainer/Current Render Log"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 13.2964
margin_top = -42.6482
margin_right = 145.296
margin_bottom = -6.64819
rect_pivot_offset = Vector2( 67.6371, 18.9391 )
text = "start render"

[node name="KillButton" type="Button" parent="TabContainer/Current Render Log"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 151.801
margin_top = -43.2244
margin_right = 283.801
margin_bottom = -7.22437
rect_pivot_offset = Vector2( 67.6371, 18.9391 )
text = "kill"
[connection signal="pressed" from="TabContainer/Current Render Log/StartButton" to="TabContainer/Current Render Log/current render log panel" method="_on_StartButton_pressed"]
[connection signal="pressed" from="TabContainer/Current Render Log/StartButton" to="TabContainer/Current Render Log/current render log panel" method="_on_Button_pressed"]
[connection signal="pressed" from="TabContainer/Current Render Log/KillButton" to="TabContainer/Current Render Log/current render log panel" method="_on_KillButton_pressed"]
